# DeltaForceTool

./: .gitignore  .pre-commit-config.yaml  README-HOTKEY.md  README.md  main.py  pyproject.toml  run_admin.bat
conf/: keymap.json
src/deltaforcetool/: __init__.py  beijinTime.py
src/deltaforcetool/app/: __init__.py  cli.py  workflow.py
src/deltaforcetool/automation/: __init__.py  engine.py  models.py  persistence.py  recorder.py  recorder_ui.py  runtime.py
src/deltaforcetool/conf/: global_hotkey.py
src/deltaforcetool/core/: __init__.py  base.py  paths.py  registry.py  settings.py
src/deltaforcetool/infrastructure/: __init__.py  hotkeys.py
src/deltaforcetool/tools/: __init__.py
src/deltaforcetool/tools/mean/: __init__.py  mean_tool.py
src/deltaforcetool/tools/ocr/: __init__.py  float_detector.py  ocr_tool.py
src/deltaforcetool/tools/wegame/: __init__.py  launcher.py
src/deltaforcetool/utils/: __init__.py  ocr.py
src/deltaforcetool/utils/time/: __init__.py  clock.py  models.py  observer.py  singleton.py
tests/automation/: test_cli_utils.py  test_engine.py  test_persistence.py
tests/core/: test_paths.py  test_settings.py
tests/ocr/: test_float_detector.py
tests/time/: __init__.py  test_models.py  test_observer.py  test_singleton.py
tests/tools/: __init__.py
tests/tools/ocr/: __init__.py  test_float_detector.py  test_ocr_tool.py
