[project]
name="deltaforcetool"
version="0.1.0"
description="A game utility tool library"
readme="README.md"
requires-python=">=3.12"
dependencies = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
deltaforcetool = "main:main"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
run = "pytest"
run-verbose = "pytest -v"
run-cov = "pytest --cov=src/deltaforcetool --cov-report=html"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
